<resources>
    <string name="app_name">Buscador de Artistas</string>
    <string name="name">Nome</string>
    <string name="logo">logo</string>
    <string name="password">Senha</string>
    <string name="btn_logar">logar</string>
    <string name="create_new_login">Não possui uma conta?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="email_valid">Email invalido</string>
    <string name="confirmar_password">Confirmar senha</string>
    <string name="save">Salvar</string>
    <string name="date_of_birth">Data de nascimento</string>
    <string name="views">visualizações</string>
    <string name="name_card">Nome:</string>
    <string name="arts_photo">arts photo</string>
    <string name="list_favourite">Listar Favoritos</string>
    <string name="search">Pesquisar</string>
    <string name="logout">sair</string>
    <string name="login">login</string>
    <string name="campNull">Este campo é obrigatório</string>
    <string name="new_user">Criar novo usuario</string>
    <string name="list_artisits">Lista dos artistas</string>
    <string name="user_create">Usuario criado</string>
    <string name="update_user">Dados atualizados </string>
    <string name="error_new_user">Erro ao criar usuario </string>
    <string name="error_update_user">Erro ao atualizar usuario </string>
    <string name="error_in_login">Erro ao fazer o login</string>
    <string name="edit_user">Editar usuario </string>
    <string name="error_in_list">Erro ao carregar a lista</string>
    <string name="update_list">Atualizar</string>
</resources>
