<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_login_edit"
        android:title="@string/login"
        android:visible="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/list_favourite"
        android:visible="true"
        android:checkable="true"
        app:actionLayout="@layout/action_layout_styled_checkbox"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="never" />

</menu>